tests/paczka1/fuzzy1/80480414.err
Error in line 12: VDsyFd67uZ A240 8,8
Error in line 5: KE4Tz9 S100 34,1
Error in line 13: VDsyFd67uZ A962 46,1
Error in line 10: N2GcOljR S100 70,7
Error in line 11: sir A240 30,4
Error in line 17: N2GcOljR A876 46,5
Error in line 25: au3NH A240 60,7
Error in line 27: au3NH S100 41,7
Error in line 29: au3NH A240 84,5
